
  * Drop unneeded Indexes option from shipped apache.conf.
  * Eliminate update_rc.d warning by not passing runlevel 1 at stop.
  * Add 25_site_logo patch by Paul Wise (closes: #267243).
  * Do not compress PDF's under /u/s/d/mailman (closes: #582259).
  * Back up ./configure before running autoconf, so it can be restored
    in clean as not to generate irrelevant diff.gz content.

 -- Thijs Kinkhorst <thijs@debian.org>  Mon, 24 May 2010 17:15:37 +0200

mailman (1:2.1.13-2) unstable; urgency=low

  * postfix-to-mailman.py: check for list existence before stripping off
    administrative suffixes, making it also work for mailing list names
    ending in e.g. -admin. Thanks Axel Beckert for the patch!
    (Closes: #570548)
  * Checked for policy 3.8.4, no changes.
  * Minor fixes pointed out by Lintian.

 -- Thijs Kinkhorst <thijs@debian.org>  Sat, 20 Mar 2010 21:57:55 +0100

mailman (1:2.1.13-1) unstable; urgency=low

  * New upstream release. Patches incorporated:
    - 16_update_debian (partially)
    - 30_pipermail_threads
    - 65_handle_templates_directories
    - 77_header_folding_in_attachments
  * Remove msgfmt.py, only used at build-time (closes: #555416).
  * Remove adduser calls for 'list' user. Base-passwd guarantees it
    to be available, and trying to add it if it were not present may
    lead to inconsistencies regarding expectations for that user.
  * Document second parameter of postfix-to-mailman.py to be
    ${mailbox}, effectively reverting inappropriate fix for #305762
    (closes: #549224).

 -- Thijs Kinkhorst <thijs@debian.org>  Thu, 31 Dec 2009 15:50:29 +0100

mailman (1:2.1.12-3) unstable; urgency=low

  * Remove potentially long running 'find' command in postinst, as
    permissions are already set correctly in the deb. Thanks Paul
    Slootman (closes: #544046).
  * Add Slovak debconf translation, thanks Ivan Masár (closes: #531576).
  * Update 30_pipermail_threads patch to use sequence ID instead of