@@ -1,2 +1,0 @@
-This package uses quilt to manage patches to upstream source.
-See /usr/share/doc/quilt/README.source for details.
