@@ -6,8 +6,6 @@ package=mailman
 PACKAGE=$(package)
 VERSION=$(shell dpkg-parsechangelog | awk '$$1 == "Version:" {print $$2}')
 
-include /usr/share/quilt/quilt.make
-
 binaries=list_lists find_member config_list mmsitepass newlist rmlist	\
 	add_members list_members remove_members arch clone_member	\
 	sync_members check_db check_perms list_admins withlist
@@ -23,7 +21,7 @@ ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
 INSTALL_PROGRAM += -s
 endif
 
-build: patch build-stamp
+build: build-stamp
 build-stamp: Makefile debian/po/templates.pot
 	$(MAKE) 
 	sed 's,@VERSION@,$(VERSION),g' < debian/preinst.in > debian/preinst
@@ -41,7 +39,7 @@ Makefile:
 		--without-permcheck --with-mailhost=localhost \
 		--with-urlhost=localhost
 
-clean: unpatch
+clean:
 	dh_testdir
 	dh_testroot
 	[ ! -f Makefile ] || $(MAKE) distclean
